--- a/style.css
+++ b/style.css
@@ -1,54 +1,79 @@
-body {
-    margin: 0px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-image: linear-gradient(27deg, #B06B27 30%, #B06B27 30%);
-}
-
-h1 {
-    font-size: 50px;
-}
-
-h2 {
-    font-size: 40px;
-}
-
-p {
-    color: rgb(34, 30, 30);
-    text-align: justify;
-}
-
-.top-div {
-    width: 40%;
-    margin-left: 5%;
-    padding-left: 2%;
-    float: left;
-}
-
-.top-div img {
-    width: 100%;
-}
-
-.button {
-    background-color: rgb(80, 9, 194);
-    color: white;
-    text-decoration: none;
-    font-weight: 700;
-    padding: 10px;
-}
-
-.bg1 {
-    background-image: url("top-banner.png");
-    background-repeat: no-repeat;
-}
-
-.bg2 {
-    background-image: url();
-}
-
-section {
-    height: 500px;
-}
-
-.highlight {
-    color: rgb(165, 52, 240);
-}
+    body {
+        margin: 0px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        background-image: linear-gradient(30deg, #004E95, #1479d1);
+        color: white;
+    }
+    
+    h1 {
+        font-size: 50px;
+    }
+    
+    h2 {
+        font-size: 40px;
+    }
+    
+    p {
+        color: rgb(235, 226, 226);
+        text-align: justify;
+    }
+    
+    .top-div {
+        width: 40%;
+        margin-left: 5%;
+        padding-left: 2%;
+        float: left;
+    }
+    
+    .top-div img {
+        width: 80%;
+    }
+    
+    .button {
+        background-color: rgb(80, 9, 194);
+        color: white;
+        text-decoration: none;
+        font-weight: 700;
+        padding: 10px;
+    }
+    
+    .bg2 {
+        background-image: url("dream-bg.png");
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+    
+    section {
+        height: 500px;
+        margin-top: 150px;
+    }
+    
+    .highlight {
+        color: rgb(165, 52, 240);
+    }
+    
+    .shadow {
+        box-shadow: 10px 10px 90px rgb(177, 176, 173);
+        padding: 20px;
+        height: 300px;
+    }
+    
+    #full-stack {
+        border-right: 7px solid white;
+        border-left: 7px solid white;
+        border-radius: 5px;
+        background-color: #004E95;
+    }
+    
+    #Junior {
+        border-right: 7px solid white;
+        border-left: 7px solid white;
+        background-color: #004E95;
+        border-radius: 5px;
+    }
+    
+    .experience {
+        background-image: url("exp-bg.png");
+        background-position: left;
+        background-repeat: no-repeat;
+    }
