--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
     body {
-        margin: 0px;
+        margin: 0;
+        padding: 0;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         background-image: linear-gradient(30deg, #004E95, #1479d1);
         color: white;
@@ -26,7 +27,7 @@
     }
     
     .top-div img {
-        width: 80%;
+        width: 100%;
     }
     
     .button {
@@ -45,7 +46,7 @@
     
     section {
         height: 500px;
-        margin-top: 150px;
+        padding-bottom: 150px;
     }
     
     .highlight {
@@ -76,4 +77,12 @@
         background-image: url("exp-bg.png");
         background-position: left;
         background-repeat: no-repeat;
+    }
+    
+    footer p {
+        background-color: #012b52;
+        font-size: 12px;
+        height: 60px;
+        text-align: center;
+        padding-top: 45px;
     }
